[package]
name = "softether_exporter"
version = "0.1.4"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/softether_exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus expoter for SoftEther VPN server"
categories = ["web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "dalance/softether_exporter" }

[dependencies]
prometheus   = "0.4.2"
lazy_static  = "1.2.0"
hyper        = { version = "0.9", default-features = false }
csv          = "1.0.0-beta.5"
toml         = "0.4"
serde        = "1.0"
serde_derive = "1.0"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
