[package]
name = "softether_exporter"
version = "0.1.5"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/softether_exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus expoter for SoftEther VPN server"
categories = ["web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "dalance/softether_exporter" }

[dependencies]
prometheus   = "0.8"
lazy_static  = "1"
hyper        = { version = "0.9", default-features = false }
csv          = "1"
toml         = "0.4"
serde        = "1"
serde_derive = "1"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/softether_exporter/compare/v{{version}}...Unreleased) - ReleaseDate"},
]
