[package]
name = "softether_exporter"
version = "0.2.1-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/softether_exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus expoter for SoftEther VPN server"
categories = ["web-programming"]
edition = "2018"
exclude = ["grafana/*", "example/*"]

[badges]
travis-ci = { repository = "dalance/softether_exporter" }

[dependencies]
anyhow       = "1"
csv          = "1"
hyper        = { version = "0.14", default-features = false }
lazy_static  = "1"
prometheus   = "0.9"
serde        = "1"
serde_derive = "1"
structopt    = "0.3"
toml         = "0.5"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/softether_exporter/compare/v{{version}}...Unreleased) - ReleaseDate"},
]
